every class with vrud operations working